sushen completely finished

--- a/localization/english/missions/sushen_missions_ti_l_english.yml
+++ b/localization/english/missions/sushen_missions_ti_l_english.yml
@@ -1,127 +1,130 @@
 ﻿l_english:
 
  sushen_missions: "The Rugged East"
- sushen_missions_DESCRIPTION: "Mission description"
- sushen_missions_CRITERIA_DESCRIPTION: "This mission will be completed when"
- sushen_missions_BUTTON_TOOLTIP: ""
+ sushen_missions_DESCRIPTION: "There are many nations that do not even know of our existence, and the Records of the Southern Kings barely mention our people, and if so, only in passing - we live in the rugged east, in vast forests that are only broken up by the mountains and the open steppe.\n\nImagine the surprise of the foreigners when they discover that we are not legends, living on the edge of civilization, but a nation of mighty conquerors - we shall spare no one that stands in our way."
+ sushen_missions_CRITERIA_DESCRIPTION: "This mission will be completed when the tribes of Sushen have reformed internally, united their kinsmen under one banner, and have conquered our rivals for power in the region."
+ sushen_missions_BUTTON_TOOLTIP: "The greatest mistake that one could make is underestimating the will of the Sushen..."
 
 #Missions
 
  sushen_missions_task_1: "Organise the Army"
- sushen_missions_DESC: ""
+ sushen_missions_task_1_DESC: "If we have any hopes of subduing the hostile nations around us, then we must overhaul our military forces from the top to the bottom.\n\nNot only must we train our levies to make sure that they are prepared for the grim days ahead, but we must have stockpiles of metal @base_metals!, wild game @wild_game!, and especially fur @fur! so that our soldiers can be properly equipped. \n\n\n\n\n\n\n\n\n\n@east_steppemil7!"
 
  sushen_missions_task_2: "Unite the Fragments"
- sushen_missions_DESC: ""
+ sushen_missions_task_2_DESC: "Our kinsmen are scattered into various tribes, each suspicious of each other and unwilling to join together for a greater purpose. And yet [ROOT.GetCountry.GetRuler.GetName] is unwilling to see our people's strength diluted; we must unite the fragments into a cohesive whole so that our glorious civilization can prosper! \n\n\n\n\n\n\n\n\n\n@east_steppemil3! "
 
  sushen_missions_task_3: "Reorganise the Tribes"
- sushen_missions_DESC: ""
+ sushen_missions_task_3_DESC: "Now that a spirit of renewal has filled the hearts of our elites, it has been suggested that we take this time to reorganize our laws and traditional structures. Before we undertake this step, however, we must make sure that the #Y Clan Chiefs#! are with us. \n\n\n\n\n\n\n\n\n\n@east_steppemil5!"
 
  sushen_missions_task_4: "Dominate Rival Mohe"
- sushen_missions_DESC: ""
+ sushen_missions_task_4_DESC: "We shall not allow any others to stand alongside us, but shall conquer and dominate any that seek to frustrate the will of [ROOT.GetCountry.GetRuler.GetName]! \n\n\n\n\n\n\n\n\n\n@east_steppemil4!"
 
  sushen_missions_task_5: "Western Nomads"
- sushen_missions_DESC: ""
+ sushen_missions_task_5_DESC: "We cannot afford to ignore the migratory tribes to our west; the history between our peoples has been one of conflict, and we presume that our armies will clash again in the future. Controlling the western steppes will provide us ample protection from their skirmishers, so it has become a priority. \n\n\n\n\n\n\n\n\n\n@east_steppemil9!"
 
- sushen_missions_task_6: "Feeding our People"
- sushen_missions_DESC: ""
+ sushen_missions_task_6: "Feeding Our People"
+ sushen_missions_task_6_DESC: "Although our attention has been focused outward, we cannot afford to neglect our countrymen back home, and part of being a good [ROOT.GetCountry.GetRulerTitle] is ensuring that the people have enough good food to eat. \n\n\n\n\n\n\n\n\n\n@celt_mil14!"
 
  sushen_missions_task_7: "Luxuries for the Chinese"
- sushen_missions_DESC: ""
+ sushen_missions_task_7_DESC: "Everyone knows that the Chinese to our south desire our precious trade goods, and fortunately for us, they have plenty of silver and gold that they are willing to exchange for our delicacies - let us give the merchants what they want! \n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  sushen_missions_task_8: "Overrun Jin"
- sushen_missions_DESC: ""
+ sushen_missions_task_8_DESC: "The momentum from the battlefield seems to be with us, and our victorious forces are prepared to overrun the region of #E Jin#! - it is time to take foreign slaves and to plunder the provinces of the Huimo people. \n\n\n\n\n\n\n\n\n\n@east_steppemil6!"
 
  sushen_missions_task_9: "Fall of the Jin Kingdoms"
- sushen_missions_DESC: ""
+ sushen_missions_task_9_DESC: "Woe, woe unto the Jin Kingdoms! Foolishly believing themselves to be safe behind their city walls, they engaged in debauchery, staining the face of the Earth with their many crimes against nature. And yet, like a purifying northern wind, our armies have swept through their lands and brought an end to their corruption. \n\n\n\n\n\n\n\n\n\n@east_steppemil10!"
 
- sushen_missions_task_10: "Formalise Ritual Practices"
- sushen_missions_DESC: ""
+ sushen_missions_task_10: "Formalize Ritual Practices"
+ sushen_missions_task_10_DESC: "While our people have been content to worship the gods in their own manner, observing whatever local traditions suit them, it has been proposed within [ROOT.GetCountry.GetCapital.GetName] that our nation formalizes their religious practices. \n\n\n\n\n\n\n\n\n\n@china_mil9!"
 
  sushen_missions_task_11: "Envoys to Ji"
- sushen_missions_DESC: ""
+ sushen_missions_task_11_DESC: "The citizens of [GetCountry('YAN').GetName] are a noble people who have traded with us northern tribes for a long time, and while many of the Chinese kingdoms view us as barbarians, this is not the case with the Yan, who respect our traditions and way of life. Now that we are in a position to project our power, we should consider sending a diplomatic gift to their capital city of [GetProvince('(int32)8742').GetName].\n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  sushen_missions_task_12: "Bypass the Mountains"
- sushen_missions_DESC: ""
+ sushen_missions_task_12_DESC: "Although we have sometimes enjoyed friendly relations with the kingdom of [GetCountry('YAN').GetName], by no means does this protect them from any future aggressions - [ROOT.GetCountry.GetRuler.GetName] has vowed to strike against the southerners when an auspicious hour is at hand. \n\n\n\n\n\n\n\n\n\n@east_steppemil2!"
 
  sushen_missions_task_13: "Factional Stability"
- sushen_missions_DESC: ""
+ sushen_missions_task_13_DESC: "At long last, a period of true prosperity and stability has come to [ROOT.GetCountry.GetName], all thanks to the unequalled efforts of [ROOT.GetCountry.GetRuler.GetName] and [ROOT.GetCountry.GetRuler.GetHerHis] advisors, who have led our people through a period of strife to a golden era.\n\nOur change in circumstances demands that we announce our triumphs to the entire world - may our foes tremble before the advance of #Y Mohe#!. \n\n\n\n\n\n\n\n\n\n@china_mil15!"
 
 
 #Events 
- me_sushen_1_title: ""
- me_sushen_1_desc: ""
- me_sushen_1.a: ""
+ me_sushen_1_title: "$sushen_missions_task_1$"
+ me_sushen_1_desc: "Although training cavalry in the forests is never easy, our soldiers have performed admirably under these difficult circumstances, exceeding even the lofty expectations placed upon them by [ROOT.GetCountry.GetRuler.GetName].\n\nNow, our #E Clan Chiefs#! report that our horsemen are truly ready for battle - morale has never been higher and the promise of plunder encourages our men to fight like demons. This generation of [ROOT.GetCountry.GetAdjective] warriors will be the ones that build a mighty nation; by all accounts, the efforts of [ROOT.GetCountry.GetRuler.GetFirstName] to reorganize our military forces has been an unprecedented success."
+ me_sushen_1.a: "Your saddlebags will be filled with anything you can carry!"
 
- me_sushen_2_title: ""
- me_sushen_2_desc: ""
- me_sushen_2.a: ""
+ me_sushen_2_title: "$sushen_missions_task_2$"
+ me_sushen_2_desc: "As we begin the process of uniting the fragmented Tungusic peoples around us, a grand notion has entered the head of [ROOT.GetCountry.GetRuler.GetName]; why settle for anything less than the complete subjugation of our kinsmen? Will we allow any others to take what is rightfully ours?\n\nOur [ROOT.GetCountry.GetRulerTitle] has fixated [ROOT.GetCountry.GetRuler.GetHerHis] vision upon achieving eternal glory, and only the will of the gods can stop [ROOT.GetCountry.GetRuler.GetFirstName] now."
+ me_sushen_2.a: "The greatest journeys begin with a first step, and now is the time"
 
- me_sushen_3_title: ""
- me_sushen_3_desc: ""
- me_sushen_3.a: ""
+ me_sushen_3_title: "$sushen_missions_task_3$"
+ me_sushen_3_desc: "Although getting our contentious #E Clan Chiefs#! to agree about anything is a difficult endeavor in the best of times, [ROOT.GetCountry.GetRuler.GetName] has managed to pull off the impossible yet again, and it has been decided that the time has finally come to change some of our laws. An impromptu tribal council has gathered in [ROOT.GetCountry.GetCapital.GetName] in order to discuss these heady matters.\n\nIn a sign of respect for [ROOT.GetCountry.GetRuler.GetFirstName], the council will allow the [ROOT.GetCountry.GetRulerTitle] to make the final decision - what law should we implement?"
+ me_sushen_3.a: "Empower the councils to make local decisions"
+ me_sushen_3.b: "Shouldn't I be the one calling all of the shots?"
+ me_sushen_3.c: "I place my trust in the dynasties of our people"
+ me_sushen_3.d: "Only the strong deserve to prosper within [ROOT.GetCountry.GetName]!"
 
- me_sushen_4_title: ""
- me_sushen_4_desc: ""
- me_sushen_4.a: ""
+ me_sushen_4_title: "$sushen_missions_task_4$"
+ me_sushen_4_desc: "When our enemies began to realize the threat that [ROOT.GetCountry.GetRuler.GetName] represented, by then, it was too late to do anything about it - our [ROOT.GetCountry.GetRulerTitle] has frustrated the efforts of those to stop [ROOT.GetCountry.GetRuler.GetHerHim] and has dominated our foes time and time again.\n\nIn a sign of our growing supremacy, many Sushen tribesmen have migrated to our capital, abandoning their homes in a clear sign that the future belongs to [ROOT.GetCountry.GetCapital.GetName]."
+ me_sushen_4.a: "There is room for everyone to live alongside us peacefully"
 
- me_sushen_5_title: ""
- me_sushen_5_desc: ""
- me_sushen_5.a: ""
+ me_sushen_5_title: "$sushen_missions_task_5$"
+ me_sushen_5_desc: "We have wonderful news from the west, [ROOT.GetCountry.GetRuler.GetName]; not only will the recently-constructed fortresses guarantee that the lands we have taken from the steppe nomads will remain in our hands, but knowledgable architects have been sent from [ROOT.GetCountry.GetCapital.GetName] to [GetProvince('(int32)9526').GetName] and [GetProvince('(int32)9561').GetName] in order to bolster the local defenses.\n\nOur elites, pleased with the successes brought on by the Sushen leadership, are proudly boasting that the western nomads will never be able to penetrate our borders ever again."
+ me_sushen_5.a: "I'd like to see the barbarians try..."
 
- me_sushen_6_title: ""
- me_sushen_6_desc: ""
- me_sushen_6.a: ""
+ me_sushen_6_title: "$sushen_missions_task_6$"
+ me_sushen_6_desc: "While many days have calamities and bring ill tidings, today is not one of them, o [ROOT.GetCountry.GetRuler.GetName], but instead, we bring word of the fertile farmlands that are feeding the people. Our food stockpiles are at an all-time high, and there are no fears of a crippling famine taking the wind out of our sails. The common man, his plump belly filled with roasted meat, sings the praises of our [ROOT.GetCountry.GetRulerTitle] and raises a glass of rice wine to toast [ROOT.GetCountry.GetRuler.GetHerHis] health."
+ me_sushen_6.a: "If the peasants are happy, then I am, as well"
 
- me_sushen_7_title: ""
- me_sushen_7_desc: ""
- me_sushen_7.a: ""
+ me_sushen_7_title: "$sushen_missions_task_7$"
+ me_sushen_7_desc: "Over the last few months, the sight of Chinese trading vessels sailing along our coasts has become a familiar one, matched only by the spectacle of caravans making the dangerous overland journey to reach the markets of [ROOT.GetCountry.GetCapital.GetName].\n\nIt appears that the Chinese, masterful judges of value, cannot get enough of our luxury goods and are filling the treasuries of [ROOT.GetCountry.GetName] to bursting - a situation that [ROOT.GetCountry.GetRuler.GetName] finds agreeable."
+ me_sushen_7.a: "There are plenty of things for sale within our nation...name your price!"
 
- me_sushen_8_title: ""
- me_sushen_8_desc: ""
- me_sushen_8.a: ""
+ me_sushen_8_title: "$sushen_missions_task_8$"
+ me_sushen_8_desc: "The mountains and hills of #E Jin#! will not prevent our forces from conquering their lands; from their earliest days, our warriors are raised on horseback and spend their days hunting and training in the forests of our home territories.\n\nAlthough the northern provinces of Jin are not as inhabited or developed as the south, it will not be long before our soldiers are standing outside of the city walls of the Jin Kingdoms."
+ me_sushen_8.a: "Onward, Sushen levies - true glory awaits you!"
 
- me_sushen_9_title: ""
- me_sushen_9_desc: ""
- me_sushen_9.a: ""
+ me_sushen_9_title: "$sushen_missions_task_9$"
+ me_sushen_9_desc: "Our triumphant forces have unleashed the judgment of the gods against the corrupt #E Jin Kingdoms#!, who fell into our hands like a rotting plum hanging low from a branch.\n\nAlthough the various Samhan people tried to muster their defenses, realizing the existential threat that our warriors represented, everything that they threw against our armies failed in the end; they were unable to match our strength on the battlefield, and their garrisons could not hold their cities. Now that their moment has passed, will anyone shed a tear for what was lost?"
+ me_sushen_9.a: "Ha - certainly not I. They deserved far worse, but I am merciful`"
 
- me_sushen_10_title: ""
- me_sushen_10_desc: ""
- me_sushen_10.a: ""
+ me_sushen_10_title: "$sushen_missions_task_10$"
+ me_sushen_10_desc: "One of the many legacies that [ROOT.GetCountry.GetRuler.GetName] will leave to the people of [ROOT.GetCountry.GetName] is the change in our religious practices. Once, our people worshiped as they pleased, with some choosing to observe particular rituals that others deemed to be unnecessary, but this is no more.\n\nWith the blessing of the priests behind [ROOT.GetCountry.GetRuler.GetHerHim], [ROOT.GetCountry.GetRuler.GetFirstName] has codified the proper ways of piety and has instructed our kinsmen to embrace these practices. "
+ me_sushen_10.a: "The gods have given us so much - this is a trifle in comparison "
 
- me_sushen_11_title: ""
- me_sushen_11_desc: ""
- me_sushen_11.a: ""
+ me_sushen_11_title: "$sushen_missions_task_11$"
+ me_sushen_11_desc: "[ROOT.GetCountry.GetRuler.GetName] has recently made overtures to the Court of [GetCountry('YAN').GetRuler.GetName] in [GetCountry('YAN').GetCapital.GetName], asking our neighbors if they would be willing to receive an embassy from [ROOT.GetCountry.GetCapital.GetName]. Our [ROOT.GetCountry.GetRulerTitle] has long admired the Yan and would like to grow our connections. Truth be told, [ROOT.GetCountry.GetRuler.GetFirstName] would one day like to conquer the kingdom, but that will be for another time.\n\nThere was much rejoicing in [ROOT.GetCountry.GetName] when word arrived that the Yan would welcome our diplomats, and preparations for their departure were made immediately."
+ me_sushen_11.a: "Go with my blessing, and be sure to enjoy your time in Ji"
  
- me_sushen_1100_title: ""
- me_sushen_1100_desc: ""
- me_sushen_1100.a: ""
+ me_sushen_1100_title: "Envoys from Sushen"
+ me_sushen_1100_desc: "Curiously, we received diplomats from [GetCountry('HSH').GetName] bearing gifts a couple of days ago. Apparently it is the desire of their leader, [GetCountry('HSH').GetRuler.GetName]. that a state of harmonious relations exists between our nations.\n\nThe foreigners were exceptionally polite and did not overstay their welcome, made sacrifices at our temples, and left within a few days."
+ me_sushen_1100.a: "We will never say no to bags of gold brought to our door"
 
- me_sushen_12_title: ""
- me_sushen_12_desc: ""
- me_sushen_12.a: ""
+ me_sushen_12_title: "$sushen_missions_task_12$"
+ me_sushen_12_desc: "Although it was ultimately [ROOT.GetCountry.GetRuler.GetName] who gave the order to send our armies into [GetCountry('YAN').GetName], it brought a momentary pang of sadness to the [ROOT.GetCountry.GetRulerTitle], who has a fondness for these people in [ROOT.GetCountry.GetRuler.GetHerHis] heart.\n\nAnd yet the foreign policy of [ROOT.GetCountry.GetName] cannot be dictated by sentimentality, and what had to be done was done. The Yan fought honorably, as best as they could, and for this, they will be remembered as worthy opponents.\n\nBut the sun has set on their power, and they have been thrust into an endless night."
+ me_sushen_12.a: "How my soul aches for the fatherless... but I did what I had to"
 
- me_sushen_13_title: ""
- me_sushen_13_desc: ""
- me_sushen_13.a: ""
+ me_sushen_13_title: "$sushen_missions_task_13$"
+ me_sushen_13_desc: "The day of our glory is upon us! Against all odds, [ROOT.GetCountry.GetRuler.GetName] has led our forces to victory after victory, carrying our armies from the forests of the rugged east to the jewel-encrusted palaces of the Chinese elites. None were able to stand against us, and the ashes of forgotten kingdoms are trampled under the hooves of our legendary warriors.\n\nNever again will the records of the foreigners dismiss us as barbarian hunters, for they have learned to properly fear the might of our people. Send forth riders to the corners of the Earth and announce the ascension of #E Mohe#!!"
+ me_sushen_13.a: "There is no going back now - we only move forward from this day"
 
  #Tooltips
- sushen_missions_task_2_claims: "TODO CLAIMS"
+ sushen_missions_task_2_claims: "We will receive claims on the #Y Huifa#!, #Y Ussuri#!, #Y Sushen#!, #Y Amur#!, #Y Sahaliyan#!, #Y Xuantu#! and #Y Lintun#! areas."
  sushen_missions_task_3_choose_between_laws: "We will be able to choose between several laws."
- sushen_missions_task_4_claims: "TODO CLAIMS"
- sushen_missions_task_8_claims: "TODO CLAIMS"
- sushen_missions_task_12_claims: "TODO CLAIMS"
+ sushen_missions_task_4_claims: "We will receive claims on the #Y Raole#!, #Y Wuhuan#! and #Y Daxianbeishan East#! areas."
+ sushen_missions_task_8_claims: "We will receive claims on the #Y Liaodong#!, #Y Lelang#!, #Y Mahan#!, #Y Jinhan#!, #Y Byeonhan#! and #Y Mahan South#! areas."
+ sushen_missions_task_12_claims: "We will receive claims on the #Y Ji#!, #Y Qing#! and #Y You#! regions."
  
  #Formable
  MOHE_NAME: "Mohe"
  MOHE_ADJECTIVE: "Mohian"
  
  #Modifiers
- sushen_organised_army: ""
- desc_sushen_organised_army: ""
- sushen_capital_mod: ""
- desc_sushen_capital_mod: ""
- sushen_chinese_trade: ""
- desc_sushen_chinese_trade: ""
- sushen_conversion_mod: ""
- desc_sushen_conversion_mod: ""
+ sushen_organised_army: "Reorganized Army"
+ desc_sushen_organised_army: "Our Clan Chiefs have reorganized our military forces and subjected them to an intense training regimen."
+ sushen_capital_mod: "Formalized Religious Practices"
+ desc_sushen_capital_mod: "It has been decided by the religious authorities within our land that everyone should worship in the same manner; no longer will the people be left to their own devices."
+ sushen_chinese_trade: "Chinese Trade Connections"
+ desc_sushen_chinese_trade: "Thanks to our reputation for crafting exceedingly luxurious goods, the Chinese have sent their merchants to our markets in hopes of obtaining our items at a discounted price."
+ sushen_conversion_mod: "A Spirit of Conversion"
+ desc_sushen_conversion_mod: "Religious fervor has gripped the hearts of the people and many have rededicated their lives to the gods."
  sushen_opinion_mod: "Tribute Arrows"
