--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- xiongnu_missions_2: "Expansion of the Chanyu"
+ xiongnu_missions_2: "Expansion of the Xiongnu"
  xiongnu_missions_2_DESCRIPTION: "Mission description"
  xiongnu_missions_2_CRITERIA_DESCRIPTION: "This mission will be completed when"
  xiongnu_missions_2_BUTTON_TOOLTIP: ""
@@ -8,70 +8,70 @@
 #Missions
 
  xiongnu_missions_2_task_1: "Subjugate Yuezhi"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_1_DESC: ""
 
  xiongnu_missions_2_task_2: "Luandi Dynasty"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_2_DESC: ""
 
  xiongnu_missions_2_task_3: "The Gryphons' Gold"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_3_DESC: ""
 
  xiongnu_missions_2_task_4: "Eastern Nomads"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_4_DESC: ""
 
  xiongnu_missions_2_task_5: "Secure Shanma"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_5_DESC: ""
 
  xiongnu_missions_2_task_6: "Laoshang"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_6_DESC: ""
 
  xiongnu_missions_2_task_7: "Lake Balkash"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_7_DESC: ""
 
  xiongnu_missions_2_task_8: "A Golden Horse"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_8_DESC: ""
 
  xiongnu_missions_2_task_9: "Doom Donghu"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_9_DESC: ""
 
  xiongnu_missions_2_task_10: "War on China"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_10_DESC: ""
 
  xiongnu_missions_2_task_11: "Gold Crown for a Chanyu"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_11_DESC: ""
 
  xiongnu_missions_2_task_12: "Central Sanctuary"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_12_DESC: ""
 
  xiongnu_missions_2_task_13: "Enter the Desert"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_13_DESC: ""
 
  xiongnu_missions_2_task_14: "Yeet Yan"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_14_DESC: ""
 
  xiongnu_missions_2_task_15: "The Eastern Coast"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_15_DESC: ""
 
  xiongnu_missions_2_task_16: "Chinese Concubine"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_16_DESC: ""
 
  xiongnu_missions_2_task_17: "City of the Chanyu"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_17_DESC: ""
 
  xiongnu_missions_2_task_18: "March Further West"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_18_DESC: ""
 
  xiongnu_missions_2_task_19: "Western Taklamakan"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_19_DESC: ""
 
  xiongnu_missions_2_task_20: "Thrust into Jin"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_20_DESC: ""
 
  xiongnu_missions_2_task_21: "From West to East"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_21_DESC: ""
  
  xiongnu_missions_2_task_22: "The Peninsula of Jin"
- xiongnu_missions_2_DESC: ""
+ xiongnu_missions_2_task_22_DESC: ""
 
 
  #Events
@@ -178,10 +178,15 @@
  any_chinese_subject: "We have at least one subject with Chinese culture."
  xiongnu_missions_2_task_21_all_governor_loyal: "All of our governors have a loyalty above 70."
  xiongnu_missions_2_task_21_all_officers_loyal: "All of our government officials have a loyalty above 70."
- xiongnu_2_speed_run_tt: "If we complete $xiongnu_missions_2_task_21$, we will retain this bonus." #zorgo make it big and red
- xiongnu_missions_2_task_4_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in above areas."
  xiongnu_missions_2_task_16_we_get_concubine: "Our chanyu will marry a Chinese woman who will greatly increase his prestige among our people."
  xiongnu_missions_2_task_6_laoshang_challenges_ruler: "Laoshang will challenge our ruler."
+ 
+ xiongnu_2_speed_run_tt: "If we complete $xiongnu_missions_2_task_21$, we will retain this bonus." #zorgo make it big and red
+ xiongnu_missions_2_task_4_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
+ xiongnu_missions_2_task_7_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
+ xiongnu_missions_2_task_15_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
+ xiongnu_missions_2_task_18_conquer_provinces: "We will annex all provinces owned by our subjects and all unclaimed provinces in TODO." #see requirements of task
+ 
  xiongnu_missions_2_task_1_claims: "TODO CLAIMS"
  xiongnu_missions_2_task_3_claims: "TODO CLAIMS"
  xiongnu_missions_2_task_4_claims: "TODO CLAIMS"
@@ -202,6 +207,12 @@
  xiongnu_02_final_mod: "TODO"
  xiongnu_sanctuary_mod: "TODO"
  city_of_chanyu: "TODO"
+ desc_xiongnu_desert_mod: "TODO"
+ desc_xiongnu_speed_run: "TODO"
+ desc_xiongnu_speed_run_reward: "TODO"
+ desc_xiongnu_02_final_mod: "TODO"
+ desc_xiongnu_sanctuary_mod: "TODO"
+ desc_city_of_chanyu: "TODO"
  
  #Treasures
  xiongnu_golden_horse: "Xiongnu Golden Horse"
