first chunk of zhao

--- a/localization/english/missions/sushen_missions_ti_l_english.yml
+++ b/localization/english/missions/sushen_missions_ti_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
 
  sushen_missions: "The Rugged East"
- sushen_missions_DESCRIPTION: "There are many nations that do not even know of our existence, and the Records of the Southern Kings barely mention our people, and if so, only in passing - we live in the rugged east, in vast forests that are only broken up by the mountains and the open steppe.\n\nImagine the surprise of the foreigners when they discover that we are not legends, living on the edge of civilization, but a nation of mighty conquerors - we shall spare no one that stands in our way."
+ sushen_missions_DESCRIPTION: "There are many nations that do not even know of our existence, and the Records of the Southern Kings barely mention our people, and if so, only in passing as a curiosity. We are the people that live in the rugged east, making our homes in the vast forests that are only broken up by the towering mountains and the endless expanse of the open steppe.\n\nImagine the surprise of the foreigners when they discover that we are not legends, living somewhere in between the edge of civilization and the realm of imagination, but a nation of mighty conquerors destined to forge an eternal kingdom - we are #E Sushen#!, and we shall spare no one that stands in our way."
  sushen_missions_CRITERIA_DESCRIPTION: "This mission will be completed when the tribes of Sushen have reformed internally, united their kinsmen under one banner, and have conquered our rivals for power in the region."
- sushen_missions_BUTTON_TOOLTIP: "The greatest mistake that one could make is underestimating the will of the Sushen..."
+ sushen_missions_BUTTON_TOOLTIP: "The time has come for the world to learn who we truly are!"
 
 #Missions
 
