--- a/localization/english/missions/zhao_missions_l_english.yml
+++ b/localization/english/missions/zhao_missions_l_english.yml
@@ -8,76 +8,76 @@
  #Missions
 
  zhao_missions_task_1: "Hufu Riding and Archery"
- zhao_missions_DESC: ""
+ zhao_missions_task_1_DESC: "[GetCharacter('(int32)610').GetName] once suggested that we not look at the #E Di#! tribesman in #E Loufan#! as backward nuisances, but as a source of inspiration for our military - the wild barbarian must be made of steel to survive in the badlands to the north.\n\n\n\n\n\n\n\n\n\n@china_mil1!"
 
  zhao_missions_task_2: "Deal with Opposition at Court"
- zhao_missions_DESC: ""
+ zhao_missions_task_2_DESC: "Despite all efforts of goodwill, [GetCharacter('(int32)609').GetName] remains a problem that must be dealt with, one way or the other. Before [ROOT.GetCountry.GetRuler.GetName] feels comfortable moving forward with [ROOT.GetCountry.GetRuler.GetHerHis] plans, any opposition at court must be silenced - the actions of [GetCharacter('(int32)609').GetName] have brought shame upon the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] House. \n\n\n\n\n\n\n\n\n\n@china_mil6!"
 
  zhao_missions_task_3: "Handan Military Camps"
- zhao_missions_DESC: ""
+ zhao_missions_task_3_DESC: "We have waged wars against many of our neighbors, but none have been as aggressive or as threatening as [GetCountry('QIN').GetName] and they remain a problem. If we have any hopes of fielding armies large enough to contend with our foes, then we must built military camps and send out the call for recruits. \n\n\n\n\n\n\n\n\n\n@tibet_mil2!"
 
  zhao_missions_task_4: "Northern Frontier"
- zhao_missions_DESC: ""
+ zhao_missions_task_4_DESC: "The northern frontier is a dangerous place, where the open steppe soon gives way to harsh deserts that are home to bandit horselords that make life miserable for the civilized peoples of the Earth. We must protect ourselves by constructing adequate fortifications, but this cannot be a simple outpost; it needs to be a beacon of civilization in the region, a place that our soldiers will find worthy of protecting. \n\n\n\n\n\n\n\n\n\n@tibet_mil9!"
 
  zhao_missions_task_5: "Barbarian Tribute"
- zhao_missions_DESC: ""
+ zhao_missions_task_5_DESC: "To the benefit of all, we currently enjoy decent relationships with [GetCountry('LNH').GetName] and [GetCountry('LOF').GetName] - our peoples seem to get along just fine. But might this relationship be developed? There is much that we could do with these barbarians, after all - they will have to do whatever we decide. \n\n\n\n\n\n\n\n\n\n@east_steppemil8!"
 
  zhao_missions_task_6: "Zhao Idioms"
- zhao_missions_DESC: ""
+ zhao_missions_task_6_DESC: "The words and ways of the common people have captivated the hearts and minds of the poets, who have collected some of our traditional sayings and mannerisms and immortalized them in song. People all across the land are now familiar with our so-called #Y Zhao Idioms#!, which they view as a source of folk wisdom that is worthy of praise and emulation - an opinion that we agree with. \n\n\n\n\n\n\n\n\n\n@tibet_mil11!"
 
  zhao_missions_task_7: "Capital of the West"
- zhao_missions_DESC: ""
+ zhao_missions_task_7_DESC: "Although the capital was moved to [ROOT.GetCountry.GetCapital.GetName], there is no reason for us to forget our former home, the second city in all of [ROOT.GetCountry.GetName], [GetProvince('(int32)8681').GetName]. We should pour the resources of the state in our second capital - the gods will reward us for our fidelity to promises made long ago. \n\n\n\n\n\n\n\n\n\n@china_mil13!"
 
  zhao_missions_task_8: "End Zhongshan"
- zhao_missions_DESC: ""
+ zhao_missions_task_8_DESC: "It has been decided that the enclave of [GetCountry('ZHS').GetName] has been tolerated long enough, and it is time to put an end to their delusions of independence from the [ROOT.GetCountry.GetAdjective]. \n\n\n\n\n\n\n\n\n\n@china_mil4!"
 
  zhao_missions_task_9: "Secure Succession"
- zhao_missions_DESC: ""
+ zhao_missions_task_9_DESC: "The time has come for [ROOT.GetCountry.GetRuler.GetName] to do what [ROOT.GetCountry.GetRuler.GetSheHe] has secretly desired; [ROOT.GetCountry.GetRuler.GetFirstName] has decided to step down from the throne and give the authority to rule over [ROOT.GetCountry.GetName] to [GetCharacter('(int32)609').GetName]. \n\n\n\n\n\n\n\n\n\n@china_mil8!"
 
  zhao_missions_task_10: "Gongsun Long"
- zhao_missions_DESC: ""
+ zhao_missions_task_10_DESC: "The School of Names, a consortium of philosophers who are sometimes dismissed as mere 'Logicians', have produced an exceptional talent in the writer #E Gongsun Long#!, who has attracted attention all throughout [ROOT.GetCountry.GetName] for his achievements and scholarly endeavors. Let us send for this wise man, to see if he will come serve [ROOT.GetCountry.GetRuler.GetName] and the people of our nation. \n\n\n\n\n\n\n\n\n\n@tibet_mil1!"
 
  zhao_missions_task_11: "Curtail Wei"
- zhao_missions_DESC: ""
+ zhao_missions_task_11_DESC: "The armies of [GetCountry('WEI').GetName] have crossed their side of the #E River He#! to seize valuable farmlands that we view as our own. The time has come to silence the yapping of this barking dog and to take what is rightfully ours. \n\n\n\n\n\n\n\n\n\n@china_mil7!"
 
  zhao_missions_task_12: "Heshibi Incident"
- zhao_missions_DESC: ""
+ zhao_missions_task_12_DESC: ""
 
  zhao_missions_task_13: "Mausoleum of the Kings of Zhao"
- zhao_missions_DESC: ""
+ zhao_missions_task_13_DESC: "Let us not forget the House of Ying, who have accomplished great deeds that are worthy of remembering forevermore - we must build an eternal resting place worthy of the noble line of warrior-kings that led our nation through difficult times. \n\n\n\n\n\n\n\n\n\n@tibet_mil12!"
 
  zhao_missions_task_14: "Promote Zao She"
- zhao_missions_DESC: ""
+ zhao_missions_task_14_DESC: ""
 
  zhao_missions_task_15: "Han Protectorate"
- zhao_missions_DESC: ""
+ zhao_missions_task_15_DESC: ""
 
  zhao_missions_task_16: "Li Mu"
- zhao_missions_DESC: ""
+ zhao_missions_task_16_DESC: ""
 
  zhao_missions_task_17: "Lian Po's Defensive Line"
- zhao_missions_DESC: ""
+ zhao_missions_task_17_DESC: ""
 
  zhao_missions_task_18: "Xiongnu Threat"
- zhao_missions_DESC: ""
+ zhao_missions_task_18_DESC: ""
 
  zhao_missions_task_19: "Quash Qin"
- zhao_missions_DESC: ""
+ zhao_missions_task_19_DESC: ""
 
  zhao_missions_task_20: "Sinus Bohai"
- zhao_missions_DESC: ""
+ zhao_missions_task_20_DESC: ""
 
  zhao_missions_task_21: "Lands of the Jin"
- zhao_missions_DESC: ""
+ zhao_missions_task_21_DESC: ""
 
  zhao_missions_task_22: "Great War of Unification"
- zhao_missions_DESC: ""
+ zhao_missions_task_22_DESC: ""
 
  zhao_missions_task_23: "Zhao Military Academy"
- zhao_missions_DESC: ""
+ zhao_missions_task_23_DESC: ""
 
  zhao_missions_task_24: "Zhao Dynasty"
- zhao_missions_DESC: ""
+ zhao_missions_task_24_DESC: ""
 
 
  #Events 
@@ -194,9 +194,9 @@
  me_zhao_24_desc: ""
  me_zhao_24.a: ""
  
- me_zhao_25_title: ""
- me_zhao_25_desc: ""
- me_zhao_25.a: ""
+ me_zhao_25_title: "At A Good Time On An Auspicious Day" #first line from a Warring States-era poem 'the songs of chu'
+ me_zhao_25_desc: "The gods have been kind to [ROOT.GetCountry.GetRuler.GetName], although the path that they set before him has never been an easy road to travel. Life consists of the usual fare for a [ROOT.GetCountry.GetAdjective] [ROOT.GetCountry.GetRulerTitle], protector of his people and defender of ancient tradition; occasional regional rebellions, pretenders to the throne pressing ill-advised claims, scandalous intrigues at court...enough to make a man weary, lamenting the heavy weight of the crown upon his brow.\n\nAnd yet things could be worse for [ROOT.GetCountry.GetRuler.GetName], and he knows it; he has a skilled minister that eases his administrative burders in [GetCharacter('(int32)610').GetName], and although [GetCharacter('(int32)609').GetName] desires a greater role for himself, this is but a fool's dream, for the people - and the soldiers - are with [ROOT.GetCountry.GetRuler.GetFirstName] and his growing family. His six-year old son [GetCharacter('(int32)493').GetName], the youngest member of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] clan, is inseparable from his father and follows him everywhere; truly, a parent's delight, a gift upon a blessing.\n\nAnd yet, there are many mournful days where the King often daydreams of retiring from his responsibilities at [ROOT.GetCountry.GetCapital.GetName]."
+ me_zhao_25.a: "One day I will get what I have truly desired, but now there is work to do"
  
  #Tooltips
  zhao_missions_task_4_wuyuan_area_fort_civ_20: "We have a fort in the Area of Wuyuan with a civilization value of at least 20."
@@ -220,10 +220,10 @@
  zhao_military_academy_decision_cd_tt: "We can only recruit every 20 years."
  
  #Modifiers
- hufu_riding_zhao: "TODO"
- desc_hufu_riding_zhao: "TODO"
- zhao_idioms: "TODO"
- desc_zhao_idioms: "TODO"
+ hufu_riding_zhao: "Horse Archer Battalions"
+ desc_hufu_riding_zhao: "Upon the recommendation of royal ministers, our levies have trained with the Hu nomads in the northern realms."
+ zhao_idioms: "Sayings and Idioms of the Esteemed Zhao People"
+ desc_zhao_idioms: "The wit and wisdom that is found in our folk-tales and common speech have earned us accolades from neighboring states."
  zhao_heshibi: "TODO"
  desc_zhao_heshibi: "TODO"
  lian_po_defensive: "TODO"
