tiny loc change to chu

--- a/localization/english/missions/chu_missions_l_english.yml
+++ b/localization/english/missions/chu_missions_l_english.yml
@@ -261,8 +261,8 @@ me_chu_26.a: "The world will learn everything there is to know about us soon eno
 me_chu_26_tooltip: "Time to make history..."
 
 me_chu_27_title: "Uncontrolled Corruption"
-me_chu_27_desc: "For many years, the #E House of Chu#! has been absentmindedly tending to the ship of state, and now we find ourselves in a perfect storm of corruption. Our government has been practically paralyzed by inefficient rulers that are more concerned with stealing from the treasuries and filling their bellies with delicacies than they are taking care of the people that they are responsible for. Now, an unchecked culture of corruption is the norm, and effective governance has been hamstrung.\n\nReforming will be difficult, but it is necessary - we cannot go on another day without attempting to carve the rot out. Although we are not fully in crisis mode, we are not as healthy as we could be - a fact that our many enemies are noticing..."
-me_chu_27.a: "We are paying for the sins of our fathers"
+me_chu_27_desc: "For many years, the #E House of [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective]#! has been absentmindedly tending to the ship of state, and now we find ourselves in a perfect storm of corruption that threatens to capsize us. Our government has been practically paralyzed by inefficient rulers that are more concerned with stealing from the treasuries and filling their bellies with delicacies than they are taking care of the people that they are responsible for. After many years, an unchecked culture of corruption is the norm, and effective governance has been completely hamstrung.\n\nReforming will be difficult, but it is necessary - we cannot go on another day without attempting to carve out the rot. Although we are not fully in crisis mode, we are not as healthy as we could be - a fact that our many enemies are noticing..."
+me_chu_27.a: "We are paying for the sins of our fathers! What a cursed fate"
 me_chu_27_tooltip: "#E Chu#! will have to deal with painful reforms if we hope to survive..."
 
  
